# assistants-examples

./: .gitignore  README.md  pyproject.toml
assistants_examples/: article.py
assistants_examples/auto-rag/: README.md  app.py  assistant.py
