[tool.poetry]
name = "assistants-examples"
version = "0.1.0"
description = ""
authors = ["Caleb <cmwetherell@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.30.1"
phidata = "^2.4.10"
duckduckgo-search = "^6.1.0"
python-dotenv = "^1.0.1"
streamlit = "^1.34.0"
nest-asyncio = "^1.6.0"
beautifulsoup4 = "^4.12.3"
sqlalchemy = "^2.0.30"
pgvector = "^0.2.5"
psycopg = "^3.1.19"
pypdf = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
